# QXlsx

./: CMakeLists.txt
QXlsx/: CMakeLists.txt
QXlsx/header/: diffit.sh
QXlsx/source/: diffit.sh  xlsxstyles.cpp  xlsxworkbook.cpp
